tests/ui/underscore-lifetime/where-clause-trait-impl-region-2015.stderr
error[E0637]: `&` without an explicit lifetime name cannot be used here
  --> $DIR/where-clause-trait-impl-region-2015.rs:10:17
   |
LL |     T: WithType<&u32>
   |                 ^ explicit lifetime name needed here
   |
help: consider introducing a higher-ranked lifetime here
   |
LL |     T: for<'a> WithType<&'a u32>
   |        +++++++           ++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0637`.
